--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,14 @@
   "name": "backend",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "app.js",
+  "private": true,
+  "main": "./src/app.js",
   "engines": {
     "node": "16.x"
   },
   "scripts": {
-    "start": "SET NODE_ENV=development && pm2 start ts-node -- app.ts --watch --no-daemon",
+    "start": "node ./src/app.ts",
+    "dev": "SET NODE_ENV=development && nodemon --delay 500ms -r tsconfig-paths/register ./src/app.ts",
     "prod": "SET NODE_ENV=production && pm2 start ./app.ts -i 0",
     "reload": "pm2 reload ./app.js"
   },
@@ -17,7 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "pm2": "^5.1.2"
+    "tsconfig-paths": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
