--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -11,10 +11,9 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json",
+    "project": "**/tsconfig.json",
     "ecmaVersion": 12,
-    "sourceType": "module",
-    "tsconfigRootDir": "./"
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
