--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development && nodemon -r tsconfig-paths/register ./src/app.ts",
-    "prod": "tsc && cross-env NODE_ENV=production && pm2 start ./dist/app.js -i 0",
+    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && cross-env NODE_ENV=production && pm2 start ./dist/app.js",
     "reload": "pm2 reload ./dist/app.js"
   },
   "dependencies": {
@@ -20,7 +20,9 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2",
-    "tsconfig-paths": "^3.11.0"
+    "tsconfig-paths": "^3.11.0",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -35,6 +37,7 @@
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.4.4"
   }
 }
