--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development && nodemon -r tsconfig-paths/register ./src/app.ts",
-    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && cross-env NODE_ENV=production && pm2 start ./dist/app.js",
+    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && cross-env NODE_ENV=production && pm2 start ./dist/app.js -i 0",
     "reload": "pm2 reload ./dist/app.js"
   },
   "dependencies": {
