--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.15",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
