--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
