--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
