--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,react,node
 
 build
+test.json
