--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "reload": "pm2 reload ./dist/app.js"
   },
   "dependencies": {
+    "@types/proj4": "^2.5.2",
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -21,6 +23,7 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2",
+    "proj4": "^2.7.5",
     "tsconfig-paths": "^3.11.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
