Feat: #26 맵 중심 좌표, 축척 정보 기반 폴리곤 API 요청 코드 구현
맵 Controller 코드 구현(기존 polygon display 코드 분리, 중심좌표 가져오는 코드 구현, 행정동 코드 변환 구현, API 요청 코드 구현
백엔드 병합 후 테스트 진행 및 수정 필요

--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src", 
+    "baseUrl": "./src",
     "paths": {
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
+      "@controllers/*": ["controllers/*"],
       "@pages/*": ["pages/*"],
       "@stores/*": ["stores/*"],
       "@styledComponents/*": ["styledComponents/*"],
