Feat: #37 - 행정구역 중심부에 마커 띄우기
- 폴리곤 데이터를 받아올 때 받은 행정구역 중심좌표를 사용하여 마커 찍기
- 실제로 백엔드로 요청하도록 API 구현 필요

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "pm2": "^5.1.2",
     "proj4": "^2.7.5",
+    "simplify-js": "^1.2.4",
     "tsconfig-paths": "^3.11.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
