Fix: #58 - build, prod 분리했을 때 env가 적용 안 됨

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,5 +82,4 @@ jobs:
             cp server-env/.env.production donggle-server/server/
             cd donggle-server/server/
             yarn install
-            yarn build
-            yarn prod
+            yarn bpd
