Fix: #58 - start로 처음 상태로 돌아와서 되는지 확인

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,9 @@ name: Node.js CD
 
 on:
   push:
-    branches: [release]
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   deploy:
@@ -24,13 +26,12 @@ jobs:
           cache: "yarn"
           cache-dependency-path: |
             client/yarn.lock
-
       - name: Generate Environment Variables File for Production
         run: |
           echo "REACT_APP_API_URL=$REACT_APP_API_URL" >> .env.production
         env:
           REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-          working-directory: ${{env.client-directory}}
+        working-directory: ${{env.client-directory}}
 
       - name: Client yarn install
         run: yarn install
@@ -50,7 +51,6 @@ jobs:
           script: |
             rm -rf /usr/share/nginx/prod/*
             cd donggle-server/server && find . -maxdepth 1 ! -name public -exec rm -rf "{}" \;
-
       - name: copy client file to deploy server
         uses: appleboy/scp-action@master
         with:
@@ -79,7 +79,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+            cp server-env/.env.development donggle-server/server/
             cp server-env/.env.production donggle-server/server/
             cd donggle-server/server/
             yarn install
+            pm2 kill
             yarn bpd
