Fix: #58 - start로 build와 prod 분리
pm2 reload는 환경변수를 적용하지 못하는 오류가 있음
build와 prod를 나누어서 나중에 server 파일 build를 github runner에서 할 수 있도록 함

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,4 +81,5 @@ jobs:
             cd donggle-server/server/
             yarn install
             pm2 kill
-            yarn bpd
+            yarn build
+            yarn prod
