Deploy: #58 - pm2 reload 환경 설정 파일 생성
pm2는 환경변수 파일로 환경변수를 설정하거나 --update-env를 설정해 주어야 환경설정이 들어감

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Node.js CD
 
 on:
   push:
-    branches: [release]
+    branches: [main]
 
 jobs:
   deploy:
@@ -80,6 +80,5 @@ jobs:
             cp server-env/.env.production donggle-server/server/
             cd donggle-server/server/
             yarn install
-            pm2 kill
             yarn build
             yarn prod
