--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "proj4": "^2.7.5",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
