Feat: #76 - 콜백 페이지와 github profile 가져오기
프론트에서 github한테 access_token을 받아올 수 없도록 되어있음(github 정책)
백엔드에서 access_token과 github api를 통해 id, image_url을 가져옴
callback page 애니메이션을 이용해 만듦

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.15",
+    "axios": "^0.24.0",
     "color-hash": "^2.0.1",
     "dotenv": "^10.0.0",
     "proj4": "^2.7.5",
