Refactor: #88 - authController 리팩토링 및 일부 타입 분리
- `types/` 디렉토리 생성
- controller/service 로직 분리

Co-authored-by: 홍승용 <jesse1231@naver.com>
Co-authored-by: J219_홍종우 <hongjw1938@gmail.com>
Co-authored-by: J077_문혜현 <hyehyeonmoon@users.noreply.github.com>

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,8 @@
       "@models/*": ["models/*"],
       "@services/*": ["services/*"],
       "@subscribers/*": ["subscribers/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@myTypes/*": ["types/*"]
     },
     "resolveJsonModule": true,
     "allowJs": true,
