--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "test": "cross-env NODE_ENV=production pm2 reload ecosystem.config.js --update-env"
   },
   "dependencies": {
-    "@types/proj4": "^2.5.2",
+    "aws-sdk": "^2.1026.0",
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,21 +24,27 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "pm2": "^5.1.2",
     "proj4": "^2.7.5",
     "simplify-js": "^1.2.4",
     "tsconfig-paths": "^3.11.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.6",
+    "@types/proj4": "^2.5.2",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.1.0",
