--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -8,7 +8,8 @@
       "@pages/*": ["pages/*"],
       "@stores/*": ["stores/*"],
       "@styledComponents/*": ["styledComponents/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@myTypes/*": ["types/*"]
     }
   }
 }
