Refactor: Custom Hook 분리

--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -9,7 +9,8 @@
       "@stores/*": ["stores/*"],
       "@styledComponents/*": ["styledComponents/*"],
       "@utils/*": ["utils/*"],
-      "@myTypes/*": ["types/*"]
+      "@myTypes/*": ["types/*"],
+      "@hooks/*": ["hooks/*"]
     }
   }
 }
