[Refactor] DB Schema 일부 변경 및 Refactoring (#97)
* Refactor: MapInfo Schema 변경에 따른 코드 수정

* Refactor: MapInfo Schema 수정 관련 코드 추가 수정 및 Revview Model Schema 수정

* Refactor: Frontend 리팩토링

DB Schema 변경 관련 코드 로직 수정
Type 코드 분리

* Refactor: Modal Component Common으로 이동

* Refactor: Custom Hook 분리

--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -8,7 +8,9 @@
       "@pages/*": ["pages/*"],
       "@stores/*": ["stores/*"],
       "@styledComponents/*": ["styledComponents/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@myTypes/*": ["types/*"],
+      "@hooks/*": ["hooks/*"]
     }
   }
 }
