Fix: 로그 제거, 환경변수 추가, API 반환값 수정

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,8 @@ CLIENT_ID=
 CLIENT_SECRET=
 JWT_SECRET=
 JWT_ALGORITHM=
+IMAGE_ACCESSKEY=
+IMAGE_SECRETACCESSKEY=
+IMAGE_ENDPOINT=
+IMAGE_BUCKET=
+IMAGE_DEFAULT_USER=
