Feat: #116 - rand-token 설치 및 응답에 refresh token 넣기
refresh token을 생성하는 rand-token을 만듦
로그인, 회원가입 성공 시 jwt token과 refresh token을 함께 줌

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.3",
     "pm2": "^5.1.2",
     "proj4": "^2.7.5",
+    "rand-token": "^1.0.1",
     "simplify-js": "^1.2.4",
     "tsconfig-paths": "^3.11.0",
     "uuid": "^8.3.2",
