--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "pm2": "^5.1.2",
     "proj4": "^2.7.5",
     "simplify-js": "^1.2.4",
+    "swagger-cli": "^4.0.4",
+    "swagger-ui-express": "^4.1.6",
     "tsconfig-paths": "^3.11.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
@@ -44,6 +46,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.6",
     "@types/proj4": "^2.5.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
