--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "color-hash": "^2.0.1",
     "dotenv": "^10.0.0",
+    "jwt-check-expiration": "^1.0.5",
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
