--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "recoil": "^0.4.1",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
+    "swr": "^1.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
