Refactor: #101 - privateRoute 분리
app.tsx에서 privateRoute를 분리해서 가독성을 높임

--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -10,7 +10,8 @@
       "@styledComponents/*": ["styledComponents/*"],
       "@utils/*": ["utils/*"],
       "@myTypes/*": ["types/*"],
-      "@hooks/*": ["hooks/*"]
+      "@hooks/*": ["hooks/*"],
+      "@routes/*": ["routes/*"]
     }
   }
 }
