--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-fast-compare": "^3.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
