--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore test.json -r tsconfig-paths/register ./src/app.ts",
-    "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
-    "prod": "pm2 reload ecosystem.config.js --env production",
-    "test": "cross-env NODE_ENV=production pm2 reload ecosystem.config.js --update-env"
+    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && pm2-runtime start ecosystem.config.js --env production"
   },
   "dependencies": {
     "aws-sdk": "^2.1026.0",
