--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,visualstudiocode,react,node
-
+*.pem
 build
 test.json
