--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "HTTPS=true SSL_CRT_FILE=localhost+2.pem SSL_KEY_FILE=localhost+2-key.pem craco start",
     "build": "craco build",
     "test": "craco test"
   },
