--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,13 @@ REACT_URL=
 CLIENT_ID=
 CLIENT_SECRET=
 JWT_SECRET=
+JWT_REFRESH_SECRET=
 JWT_ALGORITHM=
+JWT_REFRESH_ALGORITHM=
+JWT_EXPIRE=
+JWT_REFRESH_EXPIRE=
+JWT_COOKIE_EXPIRE=
+JWT_REFRESH_COOKIE_EXPIRE=
 IMAGE_ACCESSKEY=
 IMAGE_SECRETACCESSKEY=
 IMAGE_ENDPOINT=
