--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,11 @@ services:
       - client-react
       - server-express
     ports:
+      - 80:80
       - 443:443
     volumes:
       - dist:/dist
+      - ./nginx/tls:/tls
       - /etc/letsencrypt:/etc/letsencrypt
 
   client-react:
@@ -20,8 +22,8 @@ services:
       context: ./client
     env_file:
       - ./client/.env.${COMPOSE_MODE}
-    ports:
-      - 3000:3000
+    expose:
+      - 3000
     volumes:
       - dist:/client-react/build
 
@@ -31,8 +33,8 @@ services:
       context: ./server
     env_file:
       - ./server/.env.${COMPOSE_MODE}
-    ports:
-      - 5000:5000
+    expose:
+      - 5000
     dns:
       - 8.8.8.8
 
