--- a/nginx/Dockerfile.production
+++ b/nginx/Dockerfile.production
@@ -2,4 +2,4 @@ FROM nginx:latest
 
 WORKDIR /
 
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+COPY ./production.conf /etc/nginx/conf.d/default.conf
