--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -3,16 +3,26 @@ upstream express {
 }
 
 server {
+  listen 80;
+
+  server_name boost.boost-donggle.kro.kr;
+  
+  return 301 https://boost.boost-donggle.kro.kr$request_uri;
+}
+
+server {
   listen 443 ssl;
 
   server_name boost.boost-donggle.kro.kr;
+  
   ssl_certificate /etc/letsencrypt/live/boost.boost-donggle.kro.kr/fullchain.pem; # managed by Certbot
   ssl_certificate_key /etc/letsencrypt/live/boost.boost-donggle.kro.kr/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
   root /dist;
   index index.html index.htm;
+  try_files $uri $uri/ /index.html;
 
   location /api {
     proxy_pass http://express;
