Feat: #164 - CD action 작성
- github action에서 빌드후, ssh로 pull해서 docker compose 재시작
  - 빌드시 인스턴스에 많은 부하를 주므로 이런 방식 선택

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   nginx:
+    image: ghcr.io/isanghaessi/web11-donggle_nginx
     build:
       dockerfile: Dockerfile.${COMPOSE_MODE}
       context: ./nginx
@@ -17,6 +18,7 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
 
   client-react:
+    image: ghcr.io/isanghaessi/web11-donggle_client-react
     build:
       dockerfile: Dockerfile.${COMPOSE_MODE}
       context: ./client
@@ -28,6 +30,7 @@ services:
       - dist:/client-react/build
 
   server-express:
+    image: ghcr.io/isanghaessi/web11-donggle_server-express
     build:
       dockerfile: Dockerfile.${COMPOSE_MODE}
       context: ./server
