--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,90 +1,58 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-# Reference : https://github.com/boostcampwm-2021/javascript-p4-bmtown/blob/J01A/.github/workflows/main.yml
-
-name: Node.js CD
+name: continuous-deploy-by-docker
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  deploy:
-    name: Build and Deploy to nCloud
+  build_and_push:
     runs-on: ubuntu-latest
-    env:
-      client-directory: ./client
-      server-directory: ./server
-      CI: false
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-          cache: "yarn"
-          cache-dependency-path: |
-            client/yarn.lock
-      - name: Generate Environment Variables File for Production
+      - name: checkout the repo
+        uses: actions/checkout@v2
+
+      - name: create root env file
         run: |
-          echo "REACT_APP_API_URL=$REACT_APP_API_URL" >> .env.production
-          echo "REACT_APP_CLIENT_ID=$REACT_APP_CLIENT_ID" >> .env.production
-          echo "REACT_APP_REDIRECT_URL=$REACT_APP_REDIRECT_URL" >> .env.production
-          echo "REACT_APP_MAIN_URL=$REACT_APP_MAIN_URL" >> .env.production
-        env:
-          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-          REACT_APP_CLIENT_ID: ${{ secrets.REACT_APP_CLIENT_ID }}
-          REACT_APP_REDIRECT_URL: ${{ secrets.REACT_APP_REDIRECT_URL }}
-          REACT_APP_MAIN_URL: ${{ secrets.REACT_APP_MAIN_URL }}
-        working-directory: ${{ env.client-directory }}
+          rm .env
+          touch .env
+          echo "${{ secrets.ROOT_ENV }}" > .env
 
-      - name: Client yarn install
-        run: yarn install
-        working-directory: ${{env.client-directory}}
+      - name: create client env file
+        run: |
+          cd client
+          touch .env.production
+          echo "${{ secrets.CLIENT_ENV }}" > .env.production
 
-      - name: Client Build
-        run: yarn build
-        working-directory: ${{env.client-directory}}
+      - name: create env file
+        run: |
+          cd server
+          touch .env.production
+          echo "${{ secrets.SERVER_ENV }}" > .env.production
 
-      - name: clean-up deploy server
+      - name: build image
+        run: docker compose build
+
+      - name: push image
+        run: |
+          docker tag web11-donggle_nginx ghcr.io/isanghaessi/web11-donggle_nginx
+          docker tag web11-donggle_client-react ghcr.io/isanghaessi/web11-donggle_client-react
+          docker tag web11-donggle_server-express ghcr.io/isanghaessi/web11-donggle_server-express
+          docker push ghcr.io/isanghaessi/web11-donggle_nginx
+          docker push ghcr.io/isanghaessi/web11-donggle_client-react
+          docker push ghcr.io/isanghaessi/web11-donggle_server-express
+
+      - name: deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
           script: |
-            rm -rf /usr/share/nginx/prod/*
-            cd donggle-server/server && find . -maxdepth 1 ! -name public -exec rm -rf "{}" \;
-      - name: copy client file to deploy server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          source: "./client/build"
-          target: "/usr/share/nginx/prod"
-
-      - name: copy server file to deploy server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          source: "./server"
-          target: "donggle-server"
-
-      - name: start app server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script: |
-            cp server-env/.env.production donggle-server/server/
-            cd donggle-server/server/
-            yarn install
-            yarn build
-            yarn prod
+            cd /
+            mkdir -p donggle-compose
+            touch docker-compose.yml
+            echo "${{ secrets.COMPOSE_YML }}" > docker-compose.yml
+            docker-compose pull
+            docker-compose down && docker-compose up
