Fix: #189 - 개발 환경 수정
- server volumes로 mount하도록 수정
  - 그냥 개발환경의 소스변경시에도 docker에 반영되도록 하기 위해서
- nginx redirect 127.0.0.1로 수정

--- a/client/Dockerfile.development
+++ b/client/Dockerfile.development
@@ -1,11 +1,8 @@
 FROM node:latest
 
-WORKDIR /donggle-client
+WORKDIR /donggle-client-development
 
-COPY ./package.json .
 RUN yarn
-
-COPY . .
 
 ENV NODE_OPTIONS --openssl-legacy-provider
 
