--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -7,7 +7,9 @@ upstream express {
 }
 
 server {
-  return 301 https://boost.boost-donggle.kro.kr$request_uri;
+  listen 80;
+
+  return 301 https://127.0.0.1$request_uri;
 }
 
 server {
