Refactor: Modal Page 별도 디렉토리 분리
Modals 디렉토리 생성 및 코드 이동
modals Path 추가 설정

--- a/client/tsconfig.path.json
+++ b/client/tsconfig.path.json
@@ -5,6 +5,7 @@
       "@components/*": ["components/*"],
       "@assets/*": ["assets/*"],
       "@controllers/*": ["controllers/*"],
+      "@modals/*": ["modals/*"],
       "@pages/*": ["pages/*"],
       "@stores/*": ["stores/*"],
       "@styledComponents/*": ["styledComponents/*"],
