Fix: workflow파일 누락, client package.json 수정
- workflowfile 누락 업데이트
- client package.json 명령어 수정

--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=localhost+2.pem SSL_KEY_FILE=localhost+2-key.pem craco start",
+    "start": "craco start",
     "build": "craco build",
     "test": "craco test"
   },
