--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build_and_push:
+  build-push-pull-down_up:
     runs-on: ubuntu-latest
     steps:
       - name: checkout the repo
@@ -30,29 +30,44 @@ jobs:
           touch .env.production
           echo "${{ secrets.SERVER_ENV }}" > .env.production
 
+      - name: ghcr login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.ACCESS_TOKEN }}
+
       - name: build image
         run: docker compose build
 
       - name: push image
-        run: |
-          docker tag web11-donggle_nginx ghcr.io/isanghaessi/web11-donggle_nginx
-          docker tag web11-donggle_client-react ghcr.io/isanghaessi/web11-donggle_client-react
-          docker tag web11-donggle_server-express ghcr.io/isanghaessi/web11-donggle_server-express
-          docker push ghcr.io/isanghaessi/web11-donggle_nginx
-          docker push ghcr.io/isanghaessi/web11-donggle_client-react
-          docker push ghcr.io/isanghaessi/web11-donggle_server-express
+        run: docker compose push
 
       - name: deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
+          username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /
-            mkdir -p donggle-compose
-            touch docker-compose.yml
-            echo "${{ secrets.COMPOSE_YML }}" > docker-compose.yml
+            cd ~/Web11-Donggle
+            git remote update
+            git checkout origin/main
+            git reset --hard
+            rm .env
+            touch .env
+            echo "${{ secrets.ROOT_ENV }}" > .env
+            cd ./client
+            rm .env.production
+            touch .env.production
+            echo "${{ secrets.CLIENT_ENV }}" > .env.production
+            cd ../server
+            rm .env.production
+            touch .env.production
+            echo "${{ secrets.SERVER_ENV }}" > .env.production
+            cd ..
+            docker login ghcr.io/ -u ${{ secrets.USERNAME }} -p ${{ secrets.ACCESS_TOKEN }}
             docker-compose pull
-            docker-compose down && docker-compose up
+            docker-compose down
+            docker-compose up -d
