--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -22,7 +22,6 @@ server {
 
   root /dist;
   index index.html index.htm;
-  try_files $uri $uri/ /index.html;
 
   location /api {
     proxy_pass http://express;
@@ -30,5 +29,11 @@ server {
 
   location /admin {
     proxy_pass http://express;
+  }
+
+  location / {
+    try_files $uri $uri/ /index.html;
+    add_header Cache-Control "public";
+    expires 7d;
   }
 }
