--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -11,7 +11,8 @@ server {
 }
 
 server {
-  listen 443 ssl;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
 
   server_name boost.boost-donggle.kro.kr;
   
@@ -19,6 +20,7 @@ server {
   ssl_certificate_key /etc/letsencrypt/live/boost.boost-donggle.kro.kr/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+  ssl_protocols TLSv1.2;
 
   root /dist;
   index index.html index.htm;
@@ -34,6 +36,6 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
     add_header Cache-Control "public";
-    expires 7d;
+    expires 30d;
   }
 }
