--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,18 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore test.json -r tsconfig-paths/register ./src/app.ts",
-    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && pm2-runtime start ecosystem.config.js --env production"
+    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && pm2-runtime start ecosystem.config.js --env production",
+    "test": "jest"
+  },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/**/*.test.(ts|js)"
+    ],
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "globalSetup": "<rootDir>/src/tests/dotenv/env.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1026.0",
@@ -35,10 +46,12 @@
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
@@ -52,6 +65,7 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
