--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,7 +1,8 @@
 {
   "env": {
     "test": {
-      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      "plugins": ["@babel/plugin-transform-modules-commonjs", "@babel/plugin-transform-runtime"],
+      "presets": ["@babel/preset-typescript", "@babel/preset-env"]
     }
   }
 }
