--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,16 @@
     "test": "jest"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^@apis\/(.*)$": "<rootDir>/src/apis/$1",
+      "^@configs(.*)$": "<rootDir>/src/configs/$1",
+      "^@loaders\/(.*)$": "<rootDir>/src/loaders/$1",
+      "^@middlewares\/(.*)$": "<rootDir>/src/middlewares/$1",
+      "^@models\/(.*)$": "<rootDir>/src/models/$1",
+      "^@services\/(.*)$": "<rootDir>/src/services/$1",
+      "^@utils\/(.*)$": "<rootDir>/src/utils/$1",
+      "^@myTypes\/(.*)$": "<rootDir>/src/myTypes/$1"
+    },
     "testMatch": [
       "<rootDir>/**/*.test.(ts|js)"
     ],
@@ -47,6 +57,9 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
@@ -68,6 +81,8 @@
     "jest": "^27.4.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.4.4"
