--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,28 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --ignore test.json -r tsconfig-paths/register ./src/app.ts",
-    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && pm2-runtime start ecosystem.config.js --env production"
+    "prod": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist && pm2-runtime start ecosystem.config.js --env production",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@apis\/(.*)$": "<rootDir>/src/apis/$1",
+      "^@configs(.*)$": "<rootDir>/src/configs/$1",
+      "^@loaders\/(.*)$": "<rootDir>/src/loaders/$1",
+      "^@middlewares\/(.*)$": "<rootDir>/src/middlewares/$1",
+      "^@models\/(.*)$": "<rootDir>/src/models/$1",
+      "^@services\/(.*)$": "<rootDir>/src/services/$1",
+      "^@utils\/(.*)$": "<rootDir>/src/utils/$1",
+      "^@myTypes\/(.*)$": "<rootDir>/src/myTypes/$1"
+    },
+    "testMatch": [
+      "<rootDir>/**/*.test.(ts|js)"
+    ],
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "globalSetup": "<rootDir>/src/tests/dotenv/env.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1026.0",
@@ -35,10 +56,15 @@
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
@@ -52,8 +78,11 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.4.4"
