--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-push-pull-down_up:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: checkout the repo
         uses: actions/checkout@v2
